// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`# LoginReducer ## constructor ### should create default object 1`] = `
LoginReducer {
  "ACTION_ID": "909EA664-44C5-4F7F-BF9E-BA5FF5F3AC48",
  "LOCAL_STORAGE_PATH": "login",
  "STATE_PATH": "app.local.login",
  "loginAction": "LOGIN-909EA664-44C5-4F7F-BF9E-BA5FF5F3AC48",
  "loginFailureAction": "LOGIN-FAILURE-909EA664-44C5-4F7F-BF9E-BA5FF5F3AC48",
  "loginSuccessAction": "LOGIN-SUCCESS-909EA664-44C5-4F7F-BF9E-BA5FF5F3AC48",
  "logoutAction": "LOGOUT-909EA664-44C5-4F7F-BF9E-BA5FF5F3AC48",
}
`;

exports[`# LoginReducer ## initializeReducer ## should create a login reducer 1`] = `
LoginReducer {
  "ACTION_ID": "909EA664-44C5-4F7F-BF9E-BA5FF5F3AC48",
  "LOCAL_STORAGE_PATH": "login",
  "STATE_PATH": "app.local.login",
  "loginAction": "LOGIN-909EA664-44C5-4F7F-BF9E-BA5FF5F3AC48",
  "loginFailureAction": "LOGIN-FAILURE-909EA664-44C5-4F7F-BF9E-BA5FF5F3AC48",
  "loginSuccessAction": "LOGIN-SUCCESS-909EA664-44C5-4F7F-BF9E-BA5FF5F3AC48",
  "logoutAction": "LOGOUT-909EA664-44C5-4F7F-BF9E-BA5FF5F3AC48",
}
`;

exports[`# LoginReducer ## login ### should return login action arguments as an object 1`] = `
Object {
  "payload": Object {
    "email": "test@joe.com",
    "password": "password",
  },
  "type": "LOGIN-909EA664-44C5-4F7F-BF9E-BA5FF5F3AC48",
}
`;

exports[`# LoginReducer ## loginSaga ### should traverse login/logout machine 1`] = `Object {}`;

exports[`# LoginReducer ## loginSaga ### should traverse login/logout machine 2`] = `
Object {
  "@@redux-saga/IO": true,
  "SELECT": Object {
    "args": Array [
      "app.local.login.account",
    ],
    "selector": [Function],
  },
}
`;

exports[`# LoginReducer ## loginSaga ### should traverse login/logout machine 3`] = `
Object {
  "@@redux-saga/IO": true,
  "TAKE": Object {
    "pattern": Array [
      "LOGOUT-909EA664-44C5-4F7F-BF9E-BA5FF5F3AC48",
    ],
  },
}
`;

exports[`# LoginReducer ## loginSaga ### should traverse login/logout machine 4`] = `
Object {
  "@@redux-saga/IO": true,
  "CALL": Object {
    "args": Array [
      "put response",
    ],
    "context": null,
    "fn": [Function],
  },
}
`;

exports[`# LoginReducer ## loginSaga ### should traverse login/logout machine 5`] = `
Object {
  "@@redux-saga/IO": true,
  "SELECT": Object {
    "args": Array [
      "app.local.login.account",
    ],
    "selector": [Function],
  },
}
`;

exports[`# LoginReducer ## loginSaga ### should traverse login/logout machine 6`] = `
Object {
  "@@redux-saga/IO": true,
  "TAKE": Object {
    "pattern": Array [
      "LOGOUT-909EA664-44C5-4F7F-BF9E-BA5FF5F3AC48",
    ],
  },
}
`;

exports[`# LoginReducer ## loginSaga ### should traverse login/logout machine 7`] = `
Object {
  "@@redux-saga/IO": true,
  "CALL": Object {
    "args": Array [
      "logging in again",
    ],
    "context": null,
    "fn": [Function],
  },
}
`;

exports[`# LoginReducer ## logout ### should return logout action arguments as an object 1`] = `
Object {
  "type": "LOGOUT-909EA664-44C5-4F7F-BF9E-BA5FF5F3AC48",
}
`;

exports[`# LoginReducer ## reducer ### should call loginFailureHandler for loginFailureAction on pending logins 1`] = `Object {}`;

exports[`# LoginReducer ## reducer ### should call loginHandler for loginAction 1`] = `
Object {
  "email": "test@joe.com",
  "password": "password",
  "pending": true,
}
`;

exports[`# LoginReducer ## reducer ### should call loginSuccessHandler for loginSuccessAction on pending logins 1`] = `
Object {
  "account": Object {
    "name": "test success",
  },
}
`;

exports[`# LoginReducer ## reducer ### should call logoutHandler for logoutAction on completed logins 1`] = `null`;

exports[`# LoginReducer ## reducer ### should call logoutHandler for logoutAction on completed logins 2`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "account": Object {
          "name": "test",
        },
      },
      Object {
        "type": "LOGOUT-909EA664-44C5-4F7F-BF9E-BA5FF5F3AC48",
      },
    ],
  ],
  "results": Array [
    Object {
      "isThrow": false,
      "value": null,
    },
  ],
}
`;

exports[`# LoginReducer ## reducer ### should call logoutHandler for logoutAction on pending logins 1`] = `null`;

exports[`# LoginReducer ## reducer ### should use default state when called with no args 1`] = `Object {}`;
